--- a/site/documentation/sugarcoat/css/sugarcoat.css
+++ b/site/documentation/sugarcoat/css/sugarcoat.css
@@ -582,7 +582,7 @@ body {
     z-index: 100;
     position: absolute;
     width: 80%;
-    left: 10%;
+    left: 5%;
     text-align: center;
     margin-top: 10px;
     top: auto;
